--- a/xss/production/test/paintings.html
+++ b/xss/production/test/paintings.html
@@ -25,6 +25,7 @@
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
 var SoundUtils;
+var scene = new THREE.Scene();
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
@@ -639,7 +640,7 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var anim_plane;var scene;var camera_1;
+var anim_plane;var camera_1;
         var social_button = ui.Image.extend(
     {
     init: function(
@@ -1039,7 +1040,7 @@ g_sequence_manager);
             anim_plane.title = false;
 	anim_plane.set_image = function(value) 
 	{
-		anim_plane.materials[0].map = new THREE.Texture(streamer.get_resource(value).data);
+		anim_plane.materials[0].map = new THREE.Texture(scene.streamer.get_resource(value).data);
 	};
 	anim_plane.events.addListener("mousein", function(x,y)
 	{    
@@ -1275,7 +1276,7 @@ shrink.start();
 	};
         return planes_group;
         }
-threejs_load_resources(function()
+threejs_load_resources(streamer, function()
 {
 init_anim =
 new state.Sequence(
@@ -1798,28 +1799,24 @@ g_sequence_manager);
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    liquid = new ui.RippleEffect(g_ui_root.manager, g_ui_root, "images/pictures/boxdef.jpg");
-        liquid = liquid;
             liquid.set_x(0);
             liquid.set_y(0);
             liquid.set_width(app_width);
             liquid.set_height(app_height);
             liquid.alpha(0);
 		    banner = new ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/banner.png");
-        banner = banner;
             banner.set_x(15);
             banner.set_y(10);
             banner.set_width(231);
             banner.set_height(28);
             banner.alpha(0);
 		    loading = new ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/loading.png");
-        loading = loading;
             loading.set_x(280);
             loading.set_y(550);
             loading.set_width(153);
             loading.set_height(27);
             loading.alpha(0);
 		    enter_to = new ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/enter.png");
-        enter_to = enter_to;
             enter_to.set_x(310);
             enter_to.set_y(551.5);
             enter_to.set_width(92);
@@ -1865,42 +1862,36 @@ application.init_planes();
 	);
 		application.are_obj_events = true;
 		    lens1 = new ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/lente1.png");
-        lens1 = lens1;
             lens1.set_x(225);
             lens1.set_y(225);
             lens1.set_width(250);
             lens1.set_height(250);
             lens1.alpha(0);
 		    lens2 = new ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/lente2.png");
-        lens2 = lens2;
             lens2.set_x(220);
             lens2.set_y(220);
             lens2.set_width(260);
             lens2.set_height(260);
             lens2.alpha(0);
 		    facebook = new ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/facebook.png");
-        facebook = facebook;
             facebook.set_x(880);
             facebook.set_y(8);
             facebook.set_width(24);
             facebook.set_height(24);
             facebook.alpha(0);
 		    twitter = new ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/twitter.png");
-        twitter = twitter;
             twitter.set_x(845);
             twitter.set_y(8);
             twitter.set_width(24);
             twitter.set_height(24);
             twitter.alpha(0);
 		    email = new ui.Image(g_ui_root.manager, g_ui_root, "images/pictures/photobucket.png");
-        email = email;
             email.set_x(810);
             email.set_y(8);
             email.set_width(24);
             email.set_height(24);
             email.alpha(0);
 		    btn1 = new ui.Button(g_ui_root.manager, g_ui_root, "images/pictures/arrow_up.png", "images/pictures/arrow_down.png");
-        btn1 = btn1;
             btn1.set_x(0);
             btn1.set_y(300);
             btn1.set_width(64);
@@ -1940,7 +1931,6 @@ application.zoomed.rotation.y = 0;
 	);
 		application.are_obj_events = true;
 		    btn2 = new ui.Button(g_ui_root.manager, g_ui_root, "images/pictures/arrow_up.png", "images/pictures/arrow_down.png");
-        btn2 = btn2;
             btn2.set_x(840);
             btn2.set_y(300);
             btn2.set_width(64);
@@ -1979,7 +1969,6 @@ application.zoomed.rotation.y = 0;
 	);
 		application.are_obj_events = true;
 		    linetop = new ui.Line(g_ui_root.manager, g_ui_root);
-        linetop = linetop;
             linetop.set_x1(5);
             linetop.set_y1(40);
             linetop.set_x2(5);
@@ -1987,7 +1976,6 @@ application.zoomed.rotation.y = 0;
             linetop.alpha(60);
             linetop.set_color("white");
 		    line1 = new ui.Line(g_ui_root.manager, g_ui_root);
-        line1 = line1;
             line1.set_x1(200);
             line1.set_y1(200);
             line1.set_x2(200);
@@ -1995,7 +1983,6 @@ application.zoomed.rotation.y = 0;
             line1.alpha(60);
             line1.set_color("white");
 		    line2 = new ui.Line(g_ui_root.manager, g_ui_root);
-        line2 = line2;
             line2.set_x1(500);
             line2.set_y1(200);
             line2.set_x2(500);
@@ -2003,7 +1990,6 @@ application.zoomed.rotation.y = 0;
             line2.alpha(60);
             line2.set_color("white");
 		    line3 = new ui.Line(g_ui_root.manager, g_ui_root);
-        line3 = line3;
             line3.set_x1(500);
             line3.set_y1(500);
             line3.set_x2(500);
@@ -2011,7 +1997,6 @@ application.zoomed.rotation.y = 0;
             line3.alpha(60);
             line3.set_color("white");
 		    line4 = new ui.Line(g_ui_root.manager, g_ui_root);
-        line4 = line4;
             line4.set_x1(200);
             line4.set_y1(500);
             line4.set_x2(200);
@@ -2019,14 +2004,12 @@ application.zoomed.rotation.y = 0;
             line4.alpha(60);
             line4.set_color("white");
 		    rect1 = new ui.Rectangle(g_ui_root.manager, g_ui_root, null, "white", null);
-        rect1 = rect1;
             rect1.set_x(200);
             rect1.set_y(200);
             rect1.set_width(300);
             rect1.set_height(300);
             rect1.setVisible(false);
             rect1.alpha(60);
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(45, 1.5, 1, 10000, null) ;	
 		active_camera = camera_1;
