--- a/xss/production/test/ui_audio.html
+++ b/xss/production/test/ui_audio.html
@@ -9,7 +9,8 @@
             <script type="text/javascript" src="../js/ui.js"></script>
             <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">
-var drawingCanvas;		
+var drawingCanvas;	
+var streamer;	
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -330,12 +331,10 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
-        lbl1 = lbl1;
             lbl1.set_x(220);
             lbl1.set_y(190);
             lbl1.text("click the sound you want to listen");
 		    btnSound1 = new ui.Button(g_ui_root.manager, g_ui_root, "images/sound_2.png", "images/sound_2.png");
-        btnSound1 = btnSound1;
             btnSound1.set_x(275);
             btnSound1.set_y(210);
             btnSound1.set_width(50);
@@ -349,7 +348,6 @@ application.curr_sound.play();
 	);
 		application.are_obj_events = true;
 		    btnSound2 = new ui.Button(g_ui_root.manager, g_ui_root, "images/sound_1.png", "images/sound_1.png");
-        btnSound2 = btnSound2;
             btnSound2.set_x(275);
             btnSound2.set_y(240);
             btnSound2.set_width(50);
@@ -363,14 +361,12 @@ application.curr_sound.play();
 	);
 		application.are_obj_events = true;
 		    volume_bar = new ui.ProgressBar(g_ui_root.manager, g_ui_root, null);
-        volume_bar = volume_bar;
             volume_bar.set_x(225);
             volume_bar.set_y(120);
             volume_bar.value(50);
             volume_bar.set_width(150);
             volume_bar.set_height(10);
 		    btn1 = new ui.Image(g_ui_root.manager, g_ui_root, "images/arrow_left.png");
-        btn1 = btn1;
             btn1.set_x(200);
             btn1.set_y(115);
             btn1.set_width(20);
@@ -383,7 +379,6 @@ application.curr_sound.volume -= 0.100000001;
 	);
 		application.are_obj_events = true;
 		    btn2 = new ui.Image(g_ui_root.manager, g_ui_root, "images/arrow_right.png");
-        btn2 = btn2;
             btn2.set_x(380);
             btn2.set_y(115);
             btn2.set_width(20);
@@ -396,12 +391,10 @@ application.curr_sound.volume += 0.100000001;
 	);
 		application.are_obj_events = true;
 		    lbl3 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
-        lbl3 = lbl3;
             lbl3.set_x(220);
             lbl3.set_y(100);
             lbl3.text("click small arrows to adjust volume");
 		    btnPlay = new ui.Button(g_ui_root.manager, g_ui_root, "images/play.png", "images/play_over.png");
-        btnPlay = btnPlay;
             btnPlay.set_x(175);
             btnPlay.set_y(300);
             btnPlay.set_width(50);
@@ -413,7 +406,6 @@ application.curr_sound.volume += 0.100000001;
 	);
 		application.are_obj_events = true;
 		    btnPause = new ui.Button(g_ui_root.manager, g_ui_root, "images/pause.png", "images/pause_over.png");
-        btnPause = btnPause;
             btnPause.set_x(275);
             btnPause.set_y(300);
             btnPause.set_width(50);
@@ -425,7 +417,6 @@ application.curr_sound.volume += 0.100000001;
 	);
 		application.are_obj_events = true;
 		    btnStop = new ui.Button(g_ui_root.manager, g_ui_root, "images/stop.png", "images/stop_over.png");
-        btnStop = btnStop;
             btnStop.set_x(375);
             btnStop.set_y(300);
             btnStop.set_width(50);
@@ -437,11 +428,9 @@ application.curr_sound.volume += 0.100000001;
 	);
 		application.are_obj_events = true;
 		    sound_1 = new ui.Sound("sounds/forest.wav");
-        sound_1 = sound_1;
             sound_1.src = "sounds/forest.wav";
             sound_1.set_loop(false);
 		    sound_2 = new ui.Sound("sounds/applauselong.wav");
-        sound_2 = sound_2;
             sound_2.src = "sounds/applauselong.wav";
 			document.onkeydown = function(ev)
 			{
