--- a/xss/production/test/wgl_materials.html
+++ b/xss/production/test/wgl_materials.html
@@ -9,6 +9,8 @@
 	background:Black;
 	}
 </style>
+            <script type="text/javascript" src="../js/resig.js"></script>
+            <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
@@ -24,7 +26,8 @@ var canvas_position = {x:0, y:0};
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
-var streamer = new stream.Streamer();
+var scene = new THREE.Scene();
+var streamer;
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
@@ -46,7 +49,7 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var my_sphere;var material_wireframe;var all_in_one;var material_sphere1;var material_sphere2;var material_sphere3;var material_sphere4;var material_sphere5;var material_sphere6;var material_sphere7;var material_sphere8;var material_sphere9;var material_particle;var scene;var camera_1;var amb_light_1;var dir_light_1;var particle_1;var point_light_1;var plane_1;
+var my_sphere;var material_wireframe;var all_in_one;var material_sphere1;var material_sphere2;var material_sphere3;var material_sphere4;var material_sphere5;var material_sphere6;var material_sphere7;var material_sphere8;var material_sphere9;var material_particle;var camera_1;var amb_light_1;var dir_light_1;var particle_1;var point_light_1;var plane_1;
     function create_my_sphere(
     radius,x_segments,y_segments ) { 
     var my_sphere;
@@ -63,7 +66,7 @@ var my_sphere;var material_wireframe;var all_in_one;var material_sphere1;var mat
         };
         return my_sphere;
         }
-threejs_load_resources(function()
+threejs_load_resources(streamer, function()
 {
 material_wireframe = new THREE.MeshBasicMaterial({
 color:Ivory,wireframe:true
@@ -106,7 +109,6 @@ material_sphere9 = new THREE.MeshDepthMaterial({
 material_particle = new THREE.MeshBasicMaterial({
 color:White
 	});
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(45, 1.5, 1, 2000, null) ;	
 		active_camera = camera_1;
