--- a/xss/production/test/3js-ms.html
+++ b/xss/production/test/3js-ms.html
@@ -24,6 +24,7 @@
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
 var SoundUtils;
+var scene = new THREE.Scene();
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
@@ -70,7 +71,7 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var cylinder_material;var scene;var camera_1;var light;var cylinder_1;
+var cylinder_material;var camera_1;var light;var cylinder_1;
         var move_anim = state.Sequence.extend(
     {
     init: function(
@@ -145,12 +146,11 @@ var cylinder_material;var scene;var camera_1;var light;var cylinder_1;
             this.events.dispatch("init", [this]);
             },
 });
-threejs_load_resources(function()
+threejs_load_resources(streamer, function()
 {
 cylinder_material = new THREE.MeshBasicMaterial({
 color:Math.random() * 0xffffff
 	});
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(75, 1.5, 1, 3000, null) ;	
 		active_camera = camera_1;
@@ -166,7 +166,7 @@ color:Math.random() * 0xffffff
 		cylinder_1.events = new ev.EventHolder();
             set_rotation_x(cylinder_1.rotation, 10);
             set_rotation_y(cylinder_1.rotation, 10);
-	this.cylinder_1.events.addListener("click", function()
+	cylinder_1.events.addListener("click", function()
 	{    
 		anim_1.start();
 fade_1.start();
@@ -228,7 +228,6 @@ g_sequence_manager);
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl0 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
-        lbl0 = lbl0;
             lbl0.set_x(240);
             lbl0.set_y(75);
             lbl0.text("Click the cylinder to animate it");
