--- a/xss/production/test/3js_class_test_1.html
+++ b/xss/production/test/3js_class_test_1.html
@@ -23,6 +23,7 @@
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
 var SoundUtils;
+var scene = new THREE.Scene();
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
@@ -145,7 +146,7 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var my_plane;var scene;var camera_1;
+var my_plane;var camera_1;
     function create_my_plane(
     width,height,x_segments,y_segments ) { 
     var my_plane;
@@ -158,11 +159,11 @@ var my_plane;var scene;var camera_1;
         my_plane.image_set = function (value)
         {
             my_plane.image = value;
-            this.materials[0].map = new THREE.Texture(streamer.get_resource(value).data);
+            this.materials[0].map = new THREE.Texture(scene.streamer.get_resource(value).data);
         };
         return my_plane;
         }
-threejs_load_resources(function()
+threejs_load_resources(streamer, function()
 {
 	drawingCanvas.onmousemove = function(ev)
 	{
@@ -213,11 +214,9 @@ threejs_load_resources(function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl0 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
-        lbl0 = lbl0;
             lbl0.set_x(200);
             lbl0.set_y(75);
             lbl0.text("Click wherever to create a randomly positioned plane");
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(45, 1.5, 1, 10000, null) ;	
 		active_camera = camera_1;
