--- a/xss/production/test/3js_class_test_2.html
+++ b/xss/production/test/3js_class_test_2.html
@@ -23,6 +23,7 @@
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
 var SoundUtils;
+var scene = new THREE.Scene();
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
@@ -75,7 +76,7 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var my_cylinder;var scene;var camera_1;
+var my_cylinder;var camera_1;
     function create_my_cylinder(
     segments,top_radius,bottom_radius,height,topoffset,bottomoffset ) { 
     var my_cylinder;
@@ -104,7 +105,7 @@ var my_cylinder;var scene;var camera_1;
 		application.are_obj_events = true;
         return my_cylinder;
         }
-threejs_load_resources(function()
+threejs_load_resources(streamer, function()
 {
 	drawingCanvas.onmousemove = function(ev)
 	{
@@ -155,16 +156,13 @@ threejs_load_resources(function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl0 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
-        lbl0 = lbl0;
             lbl0.set_x(200);
             lbl0.set_y(75);
             lbl0.text("Click wherever to create a randomly positioned cylinder");
 		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
-        lbl1 = lbl1;
             lbl1.set_x(200);
             lbl1.set_y(100);
             lbl1.text("Pass the mouse over a cylinder to change its color");
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(75, 1.5, 1, 3000, null) ;	
 		active_camera = camera_1;
