--- a/xss/production/test/3js_materials.html
+++ b/xss/production/test/3js_materials.html
@@ -22,6 +22,7 @@
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
 var SoundUtils;
+var scene = new THREE.Scene();
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
@@ -75,7 +76,7 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var my_sphere;var material_wireframe;var all_in_one;var __basic_material1;var __basic_material2;var __lambert_material1;var __lambert_material2;var __depth_material1;var __normal_material1;var __basic_material3;var __lambert_material3;var scene;var camera_1;var amb_light_1;var dir_light_1;var particle_1;var point_light_1;var plane_1;
+var my_sphere;var material_wireframe;var all_in_one;var __basic_material1;var __basic_material2;var __lambert_material1;var __lambert_material2;var __depth_material1;var __normal_material1;var __basic_material3;var __lambert_material3;var camera_1;var amb_light_1;var dir_light_1;var particle_1;var point_light_1;var plane_1;
     function create_my_sphere(
     radius,x_segments,y_segments ) { 
     var my_sphere;
@@ -92,7 +93,7 @@ var my_sphere;var material_wireframe;var all_in_one;var __basic_material1;var __
         };
         return my_sphere;
         }
-threejs_load_resources(function()
+threejs_load_resources(streamer, function()
 {
 material_wireframe = new THREE.MeshBasicMaterial({
 color:Ivory,wireframe:true
@@ -121,14 +122,13 @@ __normal_material1 = new THREE.MeshNormalMaterial({
 	});
 	all_in_one.push(__normal_material1);
 __basic_material3 = new THREE.MeshBasicMaterial({
-map:new THREE.Texture(streamer.get_resource('images/land_ocean_ice_cloud.jpg').data),
+map:new THREE.Texture(scene.streamer.get_resource('images/land_ocean_ice_cloud.jpg').data),
 	});
 	all_in_one.push(__basic_material3);
 __lambert_material3 = new THREE.MeshLambertMaterial({
-map:new THREE.Texture(streamer.get_resource('images/land_ocean_ice_cloud.jpg').data),
+map:new THREE.Texture(scene.streamer.get_resource('images/land_ocean_ice_cloud.jpg').data),
 	});
 	all_in_one.push(__lambert_material3);
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(45, 1.5, 1, 2000, null) ;	
 		active_camera = camera_1;
