--- a/xss/production/test/3js_package.html
+++ b/xss/production/test/3js_package.html
@@ -24,6 +24,7 @@
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
 var SoundUtils;
+var scene = new THREE.Scene();
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
@@ -147,8 +148,8 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var scene;var camera_1;var plane_1;var plane_2;var plane_3;var container;var plane_4;var plane_5;
-threejs_load_resources(function()
+var camera_1;var plane_1;var plane_2;var plane_3;var container;var plane_4;var plane_5;
+threejs_load_resources(streamer, function()
 {
 	drawingCanvas.onmousemove = function(ev)
 	{
@@ -199,12 +200,10 @@ threejs_load_resources(function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    __label1 = new ui.Label(g_ui_root.manager, g_ui_root, "15px Verdana");
-        __label1 = __label1;
             __label1.set_x(150);
             __label1.set_y(75);
             __label1.set_color("Ivory");
             __label1.text("Press click to load the package");
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(45, 1.5, 1, 10000, null) ;	
 		active_camera = camera_1;
@@ -215,21 +214,21 @@ threejs_load_resources(function()
 	    plane_1 = new THREE.Mesh(plane_1_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_1);
 		plane_1.events = new ev.EventHolder();
-            plane_1.materials[0].map = new THREE.Texture(streamer.get_resource("images/test1.png").data);
+            plane_1.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test1.png").data);
             plane_1.position.x = 100;
             plane_1.position.y = 100;
 	    plane_2_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_2 = new THREE.Mesh(plane_2_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_2);
 		plane_2.events = new ev.EventHolder();
-            plane_2.materials[0].map = new THREE.Texture(streamer.get_resource("images/test2.png").data);
+            plane_2.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test2.png").data);
             plane_2.position.x = 300;
             plane_2.position.y = 100;
 	    plane_3_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_3 = new THREE.Mesh(plane_3_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_3);
 		plane_3.events = new ev.EventHolder();
-            plane_3.materials[0].map = new THREE.Texture(streamer.get_resource("images/test3.png").data);
+            plane_3.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test3.png").data);
             plane_3.position.x = 100;
             plane_3.position.y = 300;
 				pack_1.events.addListener("loaded", function()
@@ -242,7 +241,7 @@ threejs_load_resources(function()
 		plane_4.events = new ev.EventHolder();
 				container.addChild(plane_4);
 				scene.addObject(container);
-            plane_4.materials[0].map = new THREE.Texture(streamer.get_resource("images/test4.png").data);
+            plane_4.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test4.png").data);
             plane_4.position.x = -100;
 	    plane_5_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_5 = new THREE.Mesh(plane_5_plane, new THREE.MeshBasicMaterial());
@@ -250,7 +249,7 @@ threejs_load_resources(function()
 		plane_5.events = new ev.EventHolder();
 				container.addChild(plane_5);
 				scene.addObject(container);
-            plane_5.materials[0].map = new THREE.Texture(streamer.get_resource("images/test5.png").data);
+            plane_5.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test5.png").data);
             plane_5.position.x = -400;
 });
 	application.events.addListener("click", function()
