--- a/xss/production/test/3js_particle.html
+++ b/xss/production/test/3js_particle.html
@@ -21,6 +21,7 @@
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
 var SoundUtils;
+var scene = new THREE.Scene();
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
@@ -48,10 +49,9 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var scene;var camera_1;var particle_1;
-threejs_load_resources(function()
+var camera_1;var particle_1;
+threejs_load_resources(streamer, function()
 {
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(70, 1.5, 1, 1000, null) ;	
 		active_camera = camera_1;
