--- a/xss/production/test/3js_transform.html
+++ b/xss/production/test/3js_transform.html
@@ -23,6 +23,7 @@
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
 var SoundUtils;
+var scene = new THREE.Scene();
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
@@ -63,8 +64,8 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var cylinder_material;var cube_material;var sphere_material;var scene;var camera_1;var light;var cylinder_1;var container;var cube_1;var sphere_1;
-threejs_load_resources(function()
+var cylinder_material;var cube_material;var sphere_material;var camera_1;var light;var cylinder_1;var container;var cube_1;var sphere_1;
+threejs_load_resources(streamer, function()
 {
 	drawingCanvas.onmousemove = function(ev)
 	{
@@ -115,17 +116,14 @@ threejs_load_resources(function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl0 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
-        lbl0 = lbl0;
             lbl0.set_x(240);
             lbl0.set_y(75);
             lbl0.text("Move mouse to rotate the cylinder");
 		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
-        lbl1 = lbl1;
             lbl1.set_x(240);
             lbl1.set_y(100);
             lbl1.text("Move mouse pressing SHIFT to rotate the transform");
 		    lbl2 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
-        lbl2 = lbl2;
             lbl2.set_x(240);
             lbl2.set_y(125);
             lbl2.text("Move mouse pressing CTRL to rotate the camera horizontally");
@@ -137,7 +135,6 @@ color:Math.random() * 0xffffff
 	});
 sphere_material = new THREE.MeshNormalMaterial({
 	});
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(75, 1.5, 1, 3000, null) ;	
 		active_camera = camera_1;
