--- a/xss/production/test/animtest.html
+++ b/xss/production/test/animtest.html
@@ -10,7 +10,8 @@
             <script type="text/javascript" src="../js/sequence.js"></script>
             <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">
-var drawingCanvas;		
+var drawingCanvas;	
+var streamer;	
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -149,35 +150,30 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, null);
-        lbl1 = lbl1;
             lbl1.text("Button 1 Stopped");
             lbl1.set_x(10);
             lbl1.set_y(10);
             lbl1.set_width(140);
             lbl1.set_height(35);
 		    lbl2 = new ui.Label(g_ui_root.manager, g_ui_root, null);
-        lbl2 = lbl2;
             lbl2.text("Button 2 Stopped");
             lbl2.set_x(10);
             lbl2.set_y(30);
             lbl2.set_width(140);
             lbl2.set_height(35);
 		    lbl3 = new ui.Label(g_ui_root.manager, g_ui_root, null);
-        lbl3 = lbl3;
             lbl3.text("Button 3 Looping...");
             lbl3.set_x(10);
             lbl3.set_y(50);
             lbl3.set_width(140);
             lbl3.set_height(35);
 		    lbl4 = new ui.Label(g_ui_root.manager, g_ui_root, null);
-        lbl4 = lbl4;
             lbl4.text("Button 4 Waiting For Click...");
             lbl4.set_x(10);
             lbl4.set_y(70);
             lbl4.set_width(140);
             lbl4.set_height(35);
 		    btn1 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-        btn1 = btn1;
             btn1.set_x(40);
             btn1.set_y(110);
             btn1.set_width(43);
@@ -189,7 +185,6 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    btn2 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-        btn2 = btn2;
             btn2.set_x(40);
             btn2.set_y(160);
             btn2.set_width(43);
@@ -201,7 +196,6 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    btn3 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-        btn3 = btn3;
             btn3.set_x(40);
             btn3.set_y(210);
             btn3.set_width(43);
@@ -218,7 +212,6 @@ anim3.start();
 	);
 		application.are_obj_events = true;
 		    btn4 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-        btn4 = btn4;
             btn4.set_x(40);
             btn4.set_y(260);
             btn4.set_width(43);
