--- a/xss/production/test/box2d4.html
+++ b/xss/production/test/box2d4.html
@@ -13,7 +13,8 @@
             <script type="text/javascript" src="../js/spawner.js"></script>
             <script type="text/javascript" src="../js/sequence.js"></script>
 <script type="text/javascript">
-var drawingCanvas;		
+var drawingCanvas;	
+var streamer;	
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -324,7 +325,6 @@ function start(resolution)
                     }
                 }
         this.cannon = new arcade.Spawner(g_spawner_manager, 20, 60, 1, 2);
-        cannon = this.cannon;
             this.cannon.x = 20;
             this.cannon.y = 60;
             this.cannon.set_rotation(0);
@@ -678,13 +678,11 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    sound = new ui.StateButton(g_ui_root.manager, g_ui_root, "images/sound_on.png", "images/sound_off.png");
-        sound = sound;
             sound.set_x(50);
             sound.set_y(50);
             sound.set_width(50);
             sound.set_height(50);
 		    hero = new good_guy(g_ui_root.manager, g_ui_root, "images/smile_grin_48.png");
-        hero = hero;
             hero.set_x(300);
             hero.set_y(350);
 	hero.events.addListener("collision", function()
@@ -696,19 +694,16 @@ hero.src("images/smile_sad_48.png");
 	);
 		application.are_obj_events = true;
 		    __floor1 = new floor(g_ui_root.manager, g_ui_root, "images/stone-12.jpg");
-        __floor1 = __floor1;
             __floor1.set_x(0);
             __floor1.set_y(390);
             __floor1.set_width(600);
             __floor1.set_height(40);
 		    game_over = new ui.Label(g_ui_root.manager, g_ui_root, "40pt Calibri");
-        game_over = game_over;
             game_over.set_x(220);
             game_over.set_y(200);
             game_over.setVisible(false);
             game_over.text("GAME OVER");
         sp1 = new arcade.Spawner(g_spawner_manager, 300, 100, 3, null);
-        sp1 = sp1;
             sp1.x = 300;
             sp1.y = 100;
             sp1.frequency = 3;
