--- a/xss/production/test/g_anim.html
+++ b/xss/production/test/g_anim.html
@@ -24,6 +24,7 @@
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
 var SoundUtils;
+var scene = new THREE.Scene();
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
@@ -96,7 +97,7 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var my_plane;var scene;var camera_1;
+var my_plane;var camera_1;
         var my_image = ui.Image.extend(
     {
     init: function(
@@ -212,11 +213,11 @@ g_sequence_manager);
         my_plane.image_set = function (value)
         {
             my_plane.image = value;
-            this.materials[0].map = new THREE.Texture(streamer.get_resource(value).data);
+            this.materials[0].map = new THREE.Texture(scene.streamer.get_resource(value).data);
         };
         return my_plane;
         }
-threejs_load_resources(function()
+threejs_load_resources(streamer, function()
 {
 	drawingCanvas.onmousemove = function(ev)
 	{
@@ -267,12 +268,10 @@ threejs_load_resources(function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    img4 = new my_image(g_ui_root.manager, g_ui_root, "images/test1.png");
-        img4 = img4;
             img4.set_x(100);
             img4.set_y(100);
             img4.set_width(128);
             img4.set_height(164);
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(45, 1.5, 1, 10000, null) ;	
 		active_camera = camera_1;
