--- a/xss/production/test/ms4.html
+++ b/xss/production/test/ms4.html
@@ -10,7 +10,8 @@
             <script type="text/javascript" src="../js/ui.js"></script>
             <script type="text/javascript" src="../js/sequence.js"></script>
 <script type="text/javascript">
-var drawingCanvas;		
+var drawingCanvas;	
+var streamer;	
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -185,7 +186,6 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    img1 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-        img1 = img1;
             img1.set_x(100);
             img1.set_y(100);
             img1.set_width(50);
@@ -197,7 +197,6 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    img2 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-        img2 = img2;
             img2.set_x(160);
             img2.set_y(100);
             img2.set_width(50);
