--- a/xss/production/test/replicator.html
+++ b/xss/production/test/replicator.html
@@ -9,7 +9,8 @@
             <script type="text/javascript" src="../js/ui.js"></script>
             <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">
-var drawingCanvas;		
+var drawingCanvas;	
+var streamer;	
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -103,10 +104,10 @@ function start(resolution)
 		manager,parent,src        );
         this.events = new ev.EventHolder(); 
         var this__  = this;
-        data_source = null;
-        data_source_set = function (value)
+        this.data_source = null;
+        this.data_source_set = function (value)
         {
-            data_source = value;
+            this.data_source = value;
             this.src(value);
         };
             this.set_height(50);
@@ -128,19 +129,17 @@ function start(resolution)
         this.events = new ev.EventHolder(); 
         var this__  = this;
 		    this.lbl_caption = new ui.Label(this.manager, this, null);
-        lbl_caption = this.lbl_caption;
             this.lbl_caption.set_x(0);
             this.lbl_caption.set_y(10);
 		    this.icon = new ui.Image(this.manager, this, null);
-        icon = this.icon;
             this.icon.set_x(10);
             this.icon.set_y(30);
             this.icon.set_width(50);
             this.icon.set_height(50);
-        data_source = null;
-        data_source_set = function (value)
+        this.data_source = null;
+        this.data_source_set = function (value)
         {
-            data_source = value;
+            this.data_source = value;
             this.lbl_caption.text(value.caption);
 this.icon.src(value.image);
         };
@@ -224,7 +223,6 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    rep1 = new ui.Replicator(g_ui_root.manager, g_ui_root, "menu_item");
-        rep1 = rep1;
             rep1.set_x(30);
             rep1.set_y(30);
             rep1.set_width(500);
@@ -242,7 +240,6 @@ window.onload = function()
 			}
 		}
 		    rep2 = new ui.Replicator(g_ui_root.manager, g_ui_root, "my_image");
-        rep2 = rep2;
             rep2.set_x(30);
             rep2.set_y(200);
             rep2.set_width(500);
