--- a/xss/production/test/ui_audio_1.html
+++ b/xss/production/test/ui_audio_1.html
@@ -9,7 +9,8 @@
             <script type="text/javascript" src="../js/ui.js"></script>
             <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">
-var drawingCanvas;		
+var drawingCanvas;	
+var streamer;	
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -211,12 +212,10 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
-        lbl1 = lbl1;
             lbl1.set_x(220);
             lbl1.set_y(190);
             lbl1.text("click to create a new instance of a sound");
 		    btnExplosion = new ui.Button(g_ui_root.manager, g_ui_root, "images/bomb.png", "images/bomb.png");
-        btnExplosion = btnExplosion;
             btnExplosion.set_x(290);
             btnExplosion.set_y(220);
             btnExplosion.set_width(50);
@@ -228,7 +227,6 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    btnShoots = new ui.Button(g_ui_root.manager, g_ui_root, "images/AK-47.png", "images/AK-47.png");
-        btnShoots = btnShoots;
             btnShoots.set_x(275);
             btnShoots.set_y(300);
             btnShoots.set_width(100);
