--- a/xss/production/test/ui_class_test.html
+++ b/xss/production/test/ui_class_test.html
@@ -9,7 +9,8 @@
             <script type="text/javascript" src="../js/ui.js"></script>
             <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">
-var drawingCanvas;		
+var drawingCanvas;	
+var streamer;	
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -46,6 +47,20 @@ var SoundUtils = new ui.SoundUtils();
 				global_package.events.addListener("loaded", function()
 				{
 					__image1 = streamer.get_resource("__image1");
+				});
+                global_package.add_item(
+            {
+		id:				"__image2",
+		resource_type:	RESOURCE_IMAGE,
+		src:			"images/test1.png",
+		frame_width:	null,
+		frame_height:	null,
+		animations:		[]
+});	
+				var __image2;
+				global_package.events.addListener("loaded", function()
+				{
+					__image2 = streamer.get_resource("__image2");
 				});
 		global_package.add_item({
 			id:				"invalid_res",
@@ -92,6 +107,12 @@ function start(resolution)
             this.x_pos = null;
             this.y_pos = null;
             this.img2 = null;
+        image = null;
+        image_set = function (value)
+        {
+            image = value;
+            this.src(value);
+        };
 	this.traslate = function() 
 	{
 		this.x += 5;
@@ -188,19 +209,16 @@ window.onload = function()
 	});
 		    test1 = new ui.Component(g_ui_root.manager, g_ui_root);
 	    test1.mouse_thru = true;
-        test1 = test1;
             test1.set_x(200);
             test1.set_y(200);
             test1.set_width(200);
             test1.set_height(200);
 		    img4 = new my_image(test1.manager, test1, "images/img1.png");
-        img4 = img4;
             img4.set_x(0);
             img4.set_y(0);
             img4.set_width(100);
             img4.set_height(100);
 		    img1 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-        img1 = img1;
             img1.set_x(100);
             img1.set_y(100);
             img1.set_width(50);
@@ -222,6 +240,7 @@ img1.set_x(img1.x + 5);
 img1.set_y(img1.y + 5);
 application.img2 = new my_image(g_ui, g_ui_root, "images/img1.png");
 application.img2.rect(application.x_pos, application.y_pos, 50, 50);
+application.img2.image_set("images/test1.png");
 	}
 	);
 		application.are_obj_events = true;
