--- a/xss/production/test/ui_placement.html
+++ b/xss/production/test/ui_placement.html
@@ -9,7 +9,8 @@
             <script type="text/javascript" src="../js/ui.js"></script>
             <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">
-var drawingCanvas;		
+var drawingCanvas;	
+var streamer;	
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -257,38 +258,31 @@ window.onload = function()
 	});
 		    test1 = new ui.Component(g_ui_root.manager, g_ui_root);
 	    test1.mouse_thru = true;
-        test1 = test1;
             test1.set_x(100);
             test1.set_y(50);
             test1.set_width(400);
             test1.set_height(200);
 		    lbl0 = new ui.Label(test1.manager, test1, "12px Verdana");
-        lbl0 = lbl0;
             lbl0.set_x(240);
             lbl0.set_y(75);
             lbl0.text("Use keyb arrows to move div or btn");
 		    lbl2 = new ui.Label(test1.manager, test1, "12px Verdana");
-        lbl2 = lbl2;
             lbl2.set_x(240);
             lbl2.set_y(100);
             lbl2.text("Use +,- numpad to resize div");
 		    lbl3 = new ui.Label(test1.manager, test1, "12px Verdana");
-        lbl3 = lbl3;
             lbl3.set_x(240);
             lbl3.set_y(125);
             lbl3.text("Use CTRL/SHIFT to hide/show the div");
 		    lbl4 = new ui.Label(test1.manager, test1, "12px Verdana");
-        lbl4 = lbl4;
             lbl4.set_x(40);
             lbl4.set_y(150);
             lbl4.text("Use SPACE to unplace the button and clic the arrow buttons to replace it");
 		    lbl1 = new ui.Label(test1.manager, test1, "12px Verdana");
-        lbl1 = lbl1;
             lbl1.set_x(270);
             lbl1.set_y(200);
             lbl1.text("Click smiley");
 		    btn1 = new ui.Button(test1.manager, test1, "images/smile_sad_48.png", "images/smile_grin_48.png");
-        btn1 = btn1;
             btn1.set_width(50);
             btn1.set_height(50);
             btn1.set_placement("center");
@@ -300,7 +294,6 @@ application.clicks = application.clicks + 1;
 	);
 		application.are_obj_events = true;
 		    btnRight = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
-        btnRight = btnRight;
             btnRight.set_x(320);
             btnRight.set_y(350);
             btnRight.set_width(50);
@@ -313,7 +306,6 @@ application.flag = true;
 	);
 		application.are_obj_events = true;
 		    btnLeft = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
-        btnLeft = btnLeft;
             btnLeft.set_x(220);
             btnLeft.set_y(350);
             btnLeft.set_rotation(180);
@@ -327,7 +319,6 @@ application.flag = true;
 	);
 		application.are_obj_events = true;
 		    btnUp = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
-        btnUp = btnUp;
             btnUp.set_x(270);
             btnUp.set_y(300);
             btnUp.set_rotation(-90);
@@ -341,7 +332,6 @@ application.flag = true;
 	);
 		application.are_obj_events = true;
 		    btnDown = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
-        btnDown = btnDown;
             btnDown.set_x(270);
             btnDown.set_y(400);
             btnDown.set_rotation(90);
