--- a/xss/production/test/ui_video.html
+++ b/xss/production/test/ui_video.html
@@ -9,7 +9,8 @@
             <script type="text/javascript" src="../js/ui.js"></script>
             <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">
-var drawingCanvas;		
+var drawingCanvas;	
+var streamer;	
 var g_ui;
 var g_elapsed = -1;
 var g_delta = 0.0;
@@ -121,7 +122,7 @@ var SoundUtils = new ui.SoundUtils();
             {
 		id:				"__image7",
 		resource_type:	RESOURCE_IMAGE,
-		src:			"images/stop.png",
+		src:			"images/pause.png",
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
@@ -135,7 +136,7 @@ var SoundUtils = new ui.SoundUtils();
             {
 		id:				"__image8",
 		resource_type:	RESOURCE_IMAGE,
-		src:			"images/pause.png",
+		src:			"images/minus.png",
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
@@ -149,7 +150,7 @@ var SoundUtils = new ui.SoundUtils();
             {
 		id:				"__image9",
 		resource_type:	RESOURCE_IMAGE,
-		src:			"images/minus.png",
+		src:			"images/plus.png",
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
@@ -163,7 +164,7 @@ var SoundUtils = new ui.SoundUtils();
             {
 		id:				"__image10",
 		resource_type:	RESOURCE_IMAGE,
-		src:			"images/plus.png",
+		src:			"images/rota_left.png",
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
@@ -177,7 +178,7 @@ var SoundUtils = new ui.SoundUtils();
             {
 		id:				"__image11",
 		resource_type:	RESOURCE_IMAGE,
-		src:			"images/rota_left.png",
+		src:			"images/rota_right.png",
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
@@ -191,7 +192,7 @@ var SoundUtils = new ui.SoundUtils();
             {
 		id:				"__image12",
 		resource_type:	RESOURCE_IMAGE,
-		src:			"images/rota_right.png",
+		src:			"images/sound_on.png",
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
@@ -205,7 +206,7 @@ var SoundUtils = new ui.SoundUtils();
             {
 		id:				"__image13",
 		resource_type:	RESOURCE_IMAGE,
-		src:			"images/sound_on.png",
+		src:			"images/sound_off.png",
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
@@ -217,23 +218,9 @@ var SoundUtils = new ui.SoundUtils();
 				});
                 global_package.add_item(
             {
-		id:				"__image14",
-		resource_type:	RESOURCE_IMAGE,
-		src:			"images/sound_off.png",
-		frame_width:	null,
-		frame_height:	null,
-		animations:		[]
-});	
-				var __image14;
-				global_package.events.addListener("loaded", function()
-				{
-					__image14 = streamer.get_resource("__image14");
-				});
-                global_package.add_item(
-            {
 		id:				"__video1",
 		resource_type:	RESOURCE_VIDEO,
-		src:			"video/sintel.mp4",
+		src:			"video/gizmo.mp4",
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
@@ -341,19 +328,16 @@ window.onload = function()
 	{    
 		application.events.dispatch("keydown", [keycode]);
 	});
-		    v = new ui.Video(g_ui_root.manager, g_ui_root, "video/sintel.mp4");
-        v = v;
+		    v = new ui.Video(g_ui_root.manager, g_ui_root, "video/gizmo.mp4");
             v.set_x(50);
             v.set_y(50);
             v.set_width(400);
             v.set_height(200);
 		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
-        lbl1 = lbl1;
             lbl1.set_x(40);
             lbl1.set_y(300);
             lbl1.text("Volume controls");
 		    btnVolUp = new ui.Image(g_ui_root.manager, g_ui_root, "images/plus.png");
-        btnVolUp = btnVolUp;
             btnVolUp.set_x(20);
             btnVolUp.set_y(320);
             btnVolUp.set_width(30);
@@ -365,7 +349,6 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    btnVolDown = new ui.Image(g_ui_root.manager, g_ui_root, "images/minus.png");
-        btnVolDown = btnVolDown;
             btnVolDown.set_x(60);
             btnVolDown.set_y(320);
             btnVolDown.set_width(30);
@@ -377,7 +360,6 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    btnMute = new ui.StateButton(g_ui_root.manager, g_ui_root, "images/sound_on.png", "images/sound_off.png");
-        btnMute = btnMute;
             btnMute.set_x(100);
             btnMute.set_y(320);
             btnMute.set_width(30);
@@ -389,12 +371,10 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    lbl2 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
-        lbl2 = lbl2;
             lbl2.set_x(200);
             lbl2.set_y(300);
             lbl2.text("Playback controls");
 		    btnPlay = new ui.Button(g_ui_root.manager, g_ui_root, "images/play.png", "images/play_over.png");
-        btnPlay = btnPlay;
             btnPlay.set_x(180);
             btnPlay.set_y(315);
             btnPlay.set_width(40);
@@ -406,7 +386,6 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    btnPause = new ui.Button(g_ui_root.manager, g_ui_root, "images/pause.png", "images/pause_over.png");
-        btnPause = btnPause;
             btnPause.set_x(220);
             btnPause.set_y(315);
             btnPause.set_width(40);
@@ -418,7 +397,6 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    btnStop = new ui.Button(g_ui_root.manager, g_ui_root, "images/stop.png", "images/stop_over.png");
-        btnStop = btnStop;
             btnStop.set_x(260);
             btnStop.set_y(315);
             btnStop.set_width(40);
@@ -430,12 +408,10 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    lbl3 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
-        lbl3 = lbl3;
             lbl3.set_x(360);
             lbl3.set_y(300);
             lbl3.text("Rotation controls");
 		    btnRotLeft = new ui.Image(g_ui_root.manager, g_ui_root, "images/rota_left.png");
-        btnRotLeft = btnRotLeft;
             btnRotLeft.set_x(365);
             btnRotLeft.set_y(320);
             btnRotLeft.set_width(30);
@@ -447,7 +423,6 @@ window.onload = function()
 	);
 		application.are_obj_events = true;
 		    btnRotRight = new ui.Image(g_ui_root.manager, g_ui_root, "images/rota_right.png");
-        btnRotRight = btnRotRight;
             btnRotRight.set_x(405);
             btnRotRight.set_y(320);
             btnRotRight.set_width(30);
