--- a/xss/production/test/uibuffer_test.html
+++ b/xss/production/test/uibuffer_test.html
@@ -23,6 +23,7 @@
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
 var SoundUtils;
+var scene = new THREE.Scene();
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
@@ -193,8 +194,8 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var materials;var __basic_material1;var __basic_material2;var __basic_material3;var __basic_material4;var __basic_material5;var __basic_material6;var plane_material;var plane_mat1;var scene;var camera_1;var cube_1;var plane_1;
-threejs_load_resources(function()
+var materials;var __basic_material1;var __basic_material2;var __basic_material3;var __basic_material4;var __basic_material5;var __basic_material6;var plane_material;var plane_mat1;var camera_1;var cube_1;var plane_1;
+threejs_load_resources(streamer, function()
 {
 	drawingCanvas.onmousemove = function(ev)
 	{
@@ -245,12 +246,10 @@ threejs_load_resources(function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl0 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
-        lbl0 = lbl0;
             lbl0.set_x(200);
             lbl0.set_y(75);
             lbl0.text("Drag mouse to spin the cube");
 		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
-        lbl1 = lbl1;
             lbl1.set_x(200);
             lbl1.set_y(120);
             lbl1.text("Select what you want to open");
@@ -283,7 +282,6 @@ application.events.addListener("t_mousedown", function(x, y, texture)
 				webmail_ui.mousedown(x*200, y*200);
 	});
 		    r1 = new ui.Rectangle(webmail_g_ui_root.manager, webmail_g_ui_root, "beige", null, null);
-        r1 = r1;
             r1.set_x(0);
             r1.set_y(0);
             r1.set_width(200);
@@ -291,7 +289,6 @@ application.events.addListener("t_mousedown", function(x, y, texture)
             r1.mouse_thru = true;
             r1.alpha(60);
 		    yh = new ui.Button(webmail_g_ui_root.manager, webmail_g_ui_root, "images/yahoo_up.png", "images/yahoo.png");
-        yh = yh;
             yh.set_x(25);
             yh.set_y(50);
             yh.set_width(50);
@@ -303,7 +300,6 @@ application.events.addListener("t_mousedown", function(x, y, texture)
 	);
 		application.are_obj_events = true;
 		    msn = new ui.Button(webmail_g_ui_root.manager, webmail_g_ui_root, "images/msn_up.png", "images/msn.png");
-        msn = msn;
             msn.set_x(125);
             msn.set_y(50);
             msn.set_width(50);
@@ -315,7 +311,6 @@ application.events.addListener("t_mousedown", function(x, y, texture)
 	);
 		application.are_obj_events = true;
 		    title1 = new ui.Label(webmail_g_ui_root.manager, webmail_g_ui_root, "12px Verdana");
-        title1 = title1;
             title1.set_x(50);
             title1.set_y(10);
             title1.text("Webmails");
@@ -348,7 +343,6 @@ application.events.addListener("t_mousedown", function(x, y, texture)
 				soc_net_ui.mousedown(x*200, y*200);
 	});
 		    r2 = new ui.Rectangle(soc_net_g_ui_root.manager, soc_net_g_ui_root, "lightblue", null, null);
-        r2 = r2;
             r2.set_x(0);
             r2.set_y(0);
             r2.set_width(200);
@@ -356,7 +350,6 @@ application.events.addListener("t_mousedown", function(x, y, texture)
             r2.mouse_thru = true;
             r2.alpha(60);
 		    fb = new ui.Button(soc_net_g_ui_root.manager, soc_net_g_ui_root, "images/facebook_up.png", "images/facebook.png");
-        fb = fb;
             fb.set_x(25);
             fb.set_y(50);
             fb.set_width(50);
@@ -368,7 +361,6 @@ application.events.addListener("t_mousedown", function(x, y, texture)
 	);
 		application.are_obj_events = true;
 		    tw = new ui.Button(soc_net_g_ui_root.manager, soc_net_g_ui_root, "images/twitter_up.png", "images/twitter.png");
-        tw = tw;
             tw.set_x(125);
             tw.set_y(50);
             tw.set_width(50);
@@ -380,7 +372,6 @@ application.events.addListener("t_mousedown", function(x, y, texture)
 	);
 		application.are_obj_events = true;
 		    title2 = new ui.Label(soc_net_g_ui_root.manager, soc_net_g_ui_root, "12px Verdana");
-        title2 = title2;
             title2.set_x(50);
             title2.set_y(10);
             title2.text("Social networks");
@@ -416,7 +407,6 @@ color:Grey
 plane_mat1 = new THREE.MeshBasicMaterial({
 color:Green
 	});
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(70, 1.5, 1, 1000, null) ;	
 		active_camera = camera_1;
