--- a/xss/production/test/wgl_cube_img.html
+++ b/xss/production/test/wgl_cube_img.html
@@ -8,6 +8,8 @@
 	body{
 	}
 </style>
+            <script type="text/javascript" src="../js/resig.js"></script>
+            <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
@@ -23,7 +25,8 @@ var canvas_position = {x:0, y:0};
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
-var streamer = new stream.Streamer();
+var scene = new THREE.Scene();
+var streamer;
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
@@ -155,39 +158,38 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var materials;var __basic_material1;var __basic_material2;var __basic_material3;var __basic_material4;var __basic_material5;var __basic_material6;var plane_material;var scene;var camera_1;var cube_1;var plane_1;
-threejs_load_resources(function()
+var materials;var __basic_material1;var __basic_material2;var __basic_material3;var __basic_material4;var __basic_material5;var __basic_material6;var plane_material;var camera_1;var cube_1;var plane_1;
+threejs_load_resources(streamer, function()
 {
 			    materials = new Array() ;
 __basic_material1 = new THREE.MeshBasicMaterial({
-map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_1').asset),
+map:THREE.ImageUtils.loadTexture(scene.streamer.get_resource('image_1').asset),
 	});
 	materials.push(__basic_material1);
 __basic_material2 = new THREE.MeshBasicMaterial({
-map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_2').asset),
+map:THREE.ImageUtils.loadTexture(scene.streamer.get_resource('image_2').asset),
 	});
 	materials.push(__basic_material2);
 __basic_material3 = new THREE.MeshBasicMaterial({
-map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_3').asset),
+map:THREE.ImageUtils.loadTexture(scene.streamer.get_resource('image_3').asset),
 	});
 	materials.push(__basic_material3);
 __basic_material4 = new THREE.MeshBasicMaterial({
-map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_4').asset),
+map:THREE.ImageUtils.loadTexture(scene.streamer.get_resource('image_4').asset),
 	});
 	materials.push(__basic_material4);
 __basic_material5 = new THREE.MeshBasicMaterial({
-map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_5').asset),
+map:THREE.ImageUtils.loadTexture(scene.streamer.get_resource('image_5').asset),
 	});
 	materials.push(__basic_material5);
 __basic_material6 = new THREE.MeshBasicMaterial({
-map:THREE.ImageUtils.loadTexture(streamer.get_resource('image_6').asset),
+map:THREE.ImageUtils.loadTexture(scene.streamer.get_resource('image_6').asset),
 	});
 	materials.push(__basic_material6);
 plane_material = new THREE.MeshBasicMaterial({
 color:Grey
 	});
             set_material_alpha(plane_material, 50);
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(70, 1.5, 1, 1000, null) ;	
 		active_camera = camera_1;
@@ -203,7 +205,7 @@ color:Grey
 	    scene.addObject(plane_1);
 		plane_1.events = new ev.EventHolder();
             set_rotation_x(plane_1.rotation, -90);
-	var __sound_3d1 = new THREE.Sound(streamer.get_resource('sounds/forest.wav').asset
+	var __sound_3d1 = new THREE.Sound(scene.streamer.get_resource('sounds/forest.wav').asset
 	,700,20,true
 	);
 	scene.addObject(__sound_3d1);
