--- a/xss/production/test/wgl_model.html
+++ b/xss/production/test/wgl_model.html
@@ -9,6 +9,8 @@
 	background:#356;
 	}
 </style>
+            <script type="text/javascript" src="../js/resig.js"></script>
+            <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
@@ -24,7 +26,8 @@ var canvas_position = {x:0, y:0};
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
-var streamer = new stream.Streamer();
+var scene = new THREE.Scene();
+var streamer;
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
@@ -86,10 +89,9 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var scene;var camera_1;var a_ligth;var d_ligth_1;var male_model;var female_model;
-threejs_load_resources(function()
+var camera_1;var a_ligth;var d_ligth_1;var male_model;var female_model;
+threejs_load_resources(streamer, function()
 {
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(75, 1.5, 1, 100000, null) ;	
 		active_camera = camera_1;
@@ -104,10 +106,10 @@ threejs_load_resources(function()
             d_ligth_1.position.z = 100;
 	male_model = new THREE.Object3D();
 	var male_model_loader = 
-	generate_model_loader(streamer.get_resource('model/male02/Male02_slim.js').type);
+	generate_model_loader(scene.streamer.get_resource('model/male02/Male02_slim.js').type);
 		male_model_loader.load(
 		{
-				model : streamer.get_resource('model/male02/Male02_slim.js').asset , callback : function( geometry )
+				model : scene.streamer.get_resource('model/male02/Male02_slim.js').asset , callback : function( geometry )
 			{
 				var male_model_mesh = new THREE.Mesh(geometry, new THREE.MeshFaceMaterial());
 				male_model.addChild(male_model_mesh);
@@ -122,7 +124,7 @@ threejs_load_resources(function()
 		} 
 	);
 	male_model.events = new ev.EventHolder();
-	this.male_model.events.addListener("click", function()
+	male_model.events.addListener("click", function()
 	{    
 		male_model.position.x = male_model.position.x + 10;
 	}
@@ -130,10 +132,10 @@ threejs_load_resources(function()
 		application.are_obj_events = true;
 	female_model = new THREE.Object3D();
 	var female_model_loader = 
-	generate_model_loader(streamer.get_resource('model_1').type);
+	generate_model_loader(scene.streamer.get_resource('model_1').type);
 		female_model_loader.load(
 		{
-				model : streamer.get_resource('model_1').asset , callback : function( geometry )
+				model : scene.streamer.get_resource('model_1').asset , callback : function( geometry )
 			{
 				var female_model_mesh = new THREE.Mesh(geometry, new THREE.MeshFaceMaterial());
 				female_model.addChild(female_model_mesh);
@@ -148,7 +150,7 @@ threejs_load_resources(function()
 		} 
 	);
 	female_model.events = new ev.EventHolder();
-	this.female_model.events.addListener("click", function()
+	female_model.events.addListener("click", function()
 	{    
 		female_model.position.x = female_model.position.x - 10;
 	}
