--- a/xss/production/test/wgl_package.html
+++ b/xss/production/test/wgl_package.html
@@ -9,6 +9,8 @@
 	background:Black;
 	}
 </style>
+            <script type="text/javascript" src="../js/resig.js"></script>
+            <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
@@ -24,7 +26,8 @@ var canvas_position = {x:0, y:0};
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
-var streamer = new stream.Streamer();
+var scene = new THREE.Scene();
+var streamer;
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
@@ -129,10 +132,9 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var scene;var camera_1;var plane_1;var plane_2;var plane_3;var container;var plane_4;var plane_5;
-threejs_load_resources(function()
+var camera_1;var plane_1;var plane_2;var plane_3;var container;var plane_4;var plane_5;
+threejs_load_resources(streamer, function()
 {
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(45, 1.5, 1, 10000, null) ;	
 		active_camera = camera_1;
@@ -143,21 +145,21 @@ threejs_load_resources(function()
 	    plane_1 = new THREE.Mesh(plane_1_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_1);
 		plane_1.events = new ev.EventHolder();
-            plane_1.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test1.png").asset);
+            plane_1.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test1.png").asset);
             plane_1.position.x = 100;
             plane_1.position.y = 100;
 	    plane_2_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_2 = new THREE.Mesh(plane_2_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_2);
 		plane_2.events = new ev.EventHolder();
-            plane_2.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test2.png").asset);
+            plane_2.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test2.png").asset);
             plane_2.position.x = 300;
             plane_2.position.y = 100;
 	    plane_3_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_3 = new THREE.Mesh(plane_3_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_3);
 		plane_3.events = new ev.EventHolder();
-            plane_3.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test3.png").asset);
+            plane_3.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test3.png").asset);
             plane_3.position.x = 100;
             plane_3.position.y = 300;
 				pack_1.events.addListener("loaded", function()
@@ -170,7 +172,7 @@ threejs_load_resources(function()
 		plane_4.events = new ev.EventHolder();
 				container.addChild(plane_4);
 				scene.addObject(container);
-            plane_4.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test4.png").asset);
+            plane_4.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test4.png").asset);
             plane_4.position.x = -100;
 	    plane_5_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_5 = new THREE.Mesh(plane_5_plane, new THREE.MeshBasicMaterial());
@@ -178,7 +180,7 @@ threejs_load_resources(function()
 		plane_5.events = new ev.EventHolder();
 				container.addChild(plane_5);
 				scene.addObject(container);
-            plane_5.materials[0].map = THREE.ImageUtils.loadTexture(streamer.get_resource("images/test5.png").asset);
+            plane_5.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test5.png").asset);
             plane_5.position.x = -400;
 });
 	application.events.addListener("click", function()
