--- a/xss/production/test/wgl_reflection_cube.html
+++ b/xss/production/test/wgl_reflection_cube.html
@@ -9,6 +9,8 @@
 	background:Black;
 	}
 </style>
+            <script type="text/javascript" src="../js/resig.js"></script>
+            <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
@@ -24,7 +26,8 @@ var canvas_position = {x:0, y:0};
 var active_camera;
 var g_elapsed = -1;
 var g_delta = 0.0;	
-var streamer = new stream.Streamer();
+var scene = new THREE.Scene();
+var streamer;
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
@@ -46,7 +49,7 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var my_sphere;var t_cube1;var material_sphere1;var scene;var camera_1;
+var my_sphere;var t_cube1;var material_sphere1;var camera_1;
     function create_my_sphere(
     radius,x_segments,y_segments ) { 
     var my_sphere;
@@ -63,7 +66,7 @@ var my_sphere;var t_cube1;var material_sphere1;var scene;var camera_1;
         };
         return my_sphere;
         }
-threejs_load_resources(function()
+threejs_load_resources(streamer, function()
 {
 		var urls = ["images/cube/pisa/px.png", "images/cube/pisa/nx.png",
 					"images/cube/pisa/py.png", "images/cube/pisa/ny.png",
@@ -72,7 +75,6 @@ threejs_load_resources(function()
 material_sphere1 = new THREE.MeshLambertMaterial({
 color:White,envMap:t_cube1
 	});
-			    scene = new THREE.Scene() ;
 		    camera_1 = 
 		    new THREE.Camera(60, 1.5, 1, 100000, null) ;	
 		active_camera = camera_1;
